# penguins

./: pyproject.toml
models/: species-dt.pck  species-knn.pck  species-model.pck  species-svm.pck
notebooks/: classificacio.ipynb  client.ipynb
penguins/: servei.py
